--- a/index.html
+++ b/index.html
@@ -4,12 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="IMG/songwriter.png" type="image/x-icon">
     <link rel="stylesheet" href="CSS/main.css">
     <script src="JS/index.js" defer></script>
     <title>A Letra Tá Na Mão</title>
 </head>
 <body>
-    
+    <main>
+        <section class="dados-da-musica">
+            <h1>Procurar Letra</h1>
+            <form action="">
+                <input type="text" name="artista">
+                <input type="text" name="nome-music">
+                <botton class="btn">Buscar Letra</botton>
+            </form>
+        </section>
+        <section class="dados-da-musica">
+            <h2 class="title"></h2>
+            <p class="lyrics"></p>
+        </section>
+    </main>
 </body>
 </html>
