--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
     <main>
         <section class="dados-da-musica">
             <h1>Procurar Letra</h1>
-            <form action="">
-                <input type="text" name="artista">
-                <input type="text" name="nome-music">
-                <botton class="btn">Buscar Letra</botton>
+            <form class="text-area" action="#">
+                <div class="area-input">
+                    <label for="artista">Artista:</label>
+                    <input type="text" name="artista" id="artista" required>
+                    <label for="music">Música:</label>
+                    <input type="text" name="nome-music" id="music" required>
+                </div>
+                <button class="btn">Buscar Letra</button>
             </form>
         </section>
-        <section class="dados-da-musica">
+        <section class="">
             <h2 class="title"></h2>
             <p class="lyrics"></p>
         </section>
