Update design for document

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <form class="text-area" action="#">
                 <div class="area-input">
                     <label for="artista">Artista:</label>
-                    <input type="text" name="artista" id="artista" required>
+                    <input type="text" name="artista" id="artista" required placeholder=" Ex: AC/DC">
                     <label for="music">Música:</label>
-                    <input type="text" name="nome-music" id="music" required>
+                    <input type="text" name="nome-music" id="music" required placeholder=" Back in Black">
                 </div>
                 <button class="btn">Buscar Letra</button>
             </form>
         </section>
-        <section class="">
+        <section class="box-lyrics">
             <h2 class="title"></h2>
-            <p class="lyrics"></p>
+            <pre class="lyrics"></pre>
         </section>
     </main>
 </body>
