--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="btn">Buscar Letra</button>
             </form>
         </section>
-        <section class="box-lyrics">
+        <section class="box-lyrics" id="box-lyrics">
             <h2 class="title"></h2>
             <pre class="lyrics"></pre>
         </section>
