Changes to loading animation

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
                 <button class="btn">Buscar Letra</button>
             </form>
         </section>
-        <section class="box-lyrics" id="box-lyrics">
+        <section class="caixa">
+            <div id="box-lyrics"></div>
             <h2 class="title"></h2>
             <pre class="lyrics"></pre>
         </section>
