--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <form class="text-area" action="#">
                 <div class="area-input">
                     <label for="artista">Artista:</label>
-                    <input type="text" name="artista" id="artista" required placeholder=" Ex: AC/DC">
+                    <input type="text" name="artista" id="artista" required placeholder=" Ex: Coldplay">
                     <label for="music">Música:</label>
-                    <input type="text" name="nome-music" id="music" required placeholder=" Back in Black">
+                    <input type="text" name="nome-music" id="music" required placeholder=" Yellow">
                 </div>
                 <button class="btn">Buscar Letra</button>
             </form>
         </section>
-        <section class="caixa">
-            <div id="box-lyrics"></div>
+        <section class="caixa box-lyrics">
+            <div id="box-loading"></div>
             <h2 class="title"></h2>
             <pre class="lyrics"></pre>
         </section>
